chore: removed deprecated usage